src/main/java/com/example/error/demo/SpringErrorDataJpa1Application.java
package com.example.error.demo;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class SpringErrorDataJpa1Application {

	public static void main(String[] args) {
		SpringApplication.run(SpringErrorDataJpa1Application.class, args);
	}

}
